--- a/components/Navbar.module.css
+++ b/components/Navbar.module.css
@@ -15,7 +15,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 130px;
+    height: 160px;
     max-width: 1280px;
     margin: 0 auto;
     padding: 0 1.5rem;
